<resources>
    <string name="app_name">Reach2Patient</string>
    <string name="tab_text_1">Feed</string>
    <string name="tab_text_2">Donate Blood</string>
    <string name="tab_text_3">Request Blood</string>
    <string name="home_main_head">What is Corona Virus?</string>
    <string name="home_para1">Corona viruses are a large family of viruses which may cause illness in animals or humans. In humans, several corona viruses are known to cause respiratory infections ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS). The most recently discovered corona virus causes corona virus disease COVID-19.</string>
    <string name="home_sub_head1">How we can help others?</string>
    <string name="home_para2">You can help patients with a severe condition of COVID by donating antibodies in your blood. If you have recovered from COVID-19, you can help other patients by donating your blood. The antibodies developed in your blood will help fight the virus in other patient\'s bodies.</string>
    <string name="home_sub_head2">Do I Need a Test?</string>
    <string name="home_testButton">Apply for Test</string>
    <string name="home_para3">Here is some advice from the experts about the right time to get tested for COVID-19</string>
    <string name="home_sub_head3">Maintain Social Distancing</string>
    <string name="home_para4">Social distancing in a market place during COVID-19 in English and Hindi</string>
    <string name="home_sub_head4">Expert Advice</string>
    <string name="home_para5">Let\'s see what experts have to say about staying indoors and healthy practices.</string>
    <string name="home_footer">Your data is saved in a secure environment \nthat will be reached by hospital and analysis staff on a need to know basis.</string>
    <string name="univ_footer">© 2020 IIIT-D initiative.\nThis app is for a non-profit purpose, refrain from misusing.</string>
    <string name="donate_main_head">Connect to Hospital</string>
    <string name="donate_para1">We are making a non-profit attempt of saving lives by making a pool of contact numbers to facilitate availability for blood/antibody donation for hospitals. You will be contacted by relevant hospitals. If you do not want to provide your own mobile number, it is OK. You can provide the mobile number of your friend/guardian who can inform you. However, for blood transfusion, you will have to visit the hospital yourself.</string>
    <string name="donate_field1">Age</string>
    <string name="donate_hint1">Enter your age</string>
    <string name="donate_field2">Recovery Status</string>
    <string-array name="donate_recovery">
        <item>Recovered patient</item>
        <item>Not infected</item>
    </string-array>
    <string name="donate_field3">Blood Group</string>
    <string-array name="donate_bgroup">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="donate_field4">Phone</string>
    <string name="donate_hint4">Enter your phone</string>
    <string name="donate_field5">City</string>
    <string name="donate_hint5">Enter your city</string>
    <string name="donate_button">Submit</string>
    <string name="donate_footer">Kindly do not entertain phone calls on this issue from any individual until it comes from a hospital. For your safety, try using your own transportation system to go to the hospital which contacted you for blood.</string>
    <string name="request_main_head">Inform Us</string>
    <string name="request_para1">We are making a non-profit attempt of saving lives by making a pool of contact numbers to facilitate availability for blood/antibody donation for hospitals. We will send relevant contact information to your hospital. Kindly give your contact number and your hospitals contact info (email id is optional). We do not need your personal details.</string>
    <string name="request_field1">Age</string>
    <string name="request_hint1">Enter your age</string>
    <string name="request_field2">Recovery Status</string>
    <string-array name="request_recovery">
        <item>Recovered patient</item>
        <item>Others</item>
    </string-array>
    <string name="request_field3">Blood Group</string>
    <string-array name="request_bgroup">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="request_field4">Phone</string>
    <string name="request_hint4">Enter phone</string>
    <string name="request_field5">Hospital\'s Phone</string>
    <string name="request_hint5">Enter hospital\'s phone</string>
    <string name="request_field6">Hospital\'s Email</string>
    <string name="request_hint6">Enter hospital\'s email</string>
    <string name="request_field7">City</string>
    <string name="request_hint7">Enter your city</string>
    <string name="request_button">Submit</string>
    <string name="request_footer">You may want to post your need for blood plasma on our dashboard, and maybe you get some help. However, always meet or call the potential donor only in a hospital, as he could be having an infection.</string>
    <string name="main_menu_item1">Apply for Test</string>
    <string name="main_menu_item2">Delete Request</string>
    <string name="main_menu_item3">T&amp;Cs</string>
    <string name="main_menu_item4">Consent Letter</string>
    <string name="main_menu_item5">Contact</string>
    <string name="main_menu_item6">Refresh Feed</string>
    <string name="post_main_head">Post Your Need of Plasma</string>
    <string name="post_para1">You can post about your need for blood plasma here. This will let others know about your need and extend a helping hand. You can also see posts by other people below the form. But do not rely entirely on posting your advertisement here. You should also try your best to connect to different hospitals which have treated corona patients.</string>
    <string name="post_field1">Content</string>
    <string name="post_hint1">Enter post here</string>
    <string name="post_field2">Name</string>
    <string name="post_hint2">Enter name</string>
    <string name="post_field3">Email</string>
    <string name="post_hint3">Enter email</string>
    <string name="post_field4">Phone</string>
    <string name="post_hint4">Enter phone</string>
    <string name="post_field5">City</string>
    <string name="post_hint5">Enter city</string>
    <string name="post_field6">State</string>
    <string name="post_hint6">Enter state</string>
    <string name="post_field7">Country</string>
    <string name="post_hint7">Enter country</string>
    <string name="post_button">Submit</string>
    <string name="post_sub_head">Posts</string>
    <string name="post_para2">You can search for posts country-wise. Please refer to the Country form field above for naming conventions (e.g. instead of US, use United States).</string>
    <string name="faq_main_head">Blood Transfusion</string>
    <string name="faq_para1">The idea of using plasma from survivors, also known as convalescent-plasma therapy, dates back to the late 19th century. Doctors have transfused the blood of recovered patients into those still sick with the 1918 flu, measles, polio, chickenpox, SARS, and Ebola to varying degrees of success. Given the dearth of treatments for COVID-19, convalescent plasma has gained new prominence. The blood of survivors, the thinking goes, contains proteins called antibodies that can neutralize the corona virus.</string>
    <string name="faq_sub_head1">Experts\' View</string>
    <string name="faq_hyperlink1">Read More From Other Site</string>
    <string name="faq_para2">Let\'s see what the experts and people who have undergone blood transfusion have to say.</string>
    <string name="faq_hyperlink2">Mayo Clinic CEO says convalescent plasma could be an effective treatment for corona virus.</string>
    <string name="contact_main_head">Our Team is From IIIT Delhi</string>
    <string name="contact_para1">Our initiative is a non-profit effort to connect donor and needy via hospitals. We are currently focusing on COVID pandemic.</string>
    <string name="contact_sub_head1">Contact Us</string>
    <string name="contact_para2">For any query you can contact us at: contact.reach2patient@gmail.com</string>
    <string name="consent_main_head">Information and Consent Letter for Collecting your Contact Information</string>
    <string name="consent_para1">Even  though  we  are  not  a  profit-making  financial  institution,  but  we  are  following  the  Telephone Consumer  Protection  protocol  and  require  consent  before  contacting  volunteers  and members  on their  phones.  We  do  not  do  blood  transfusion  for  you  but  we  are  just  providing  IT  support  to  help hospitals  to  get  contact  of  volunteers.  We  are  also  trying  to  provide  an  opportunity  for  patients  to connect to hospitals for blood transfusion. Ifyou give your phone number and you have volunteered to donate blood for the treatment of patients, we will provide your phone number to hospital. Hence you will get a call from the hospital. If you have given your phone number for receiving blood, you will get a call from hospitals who have the facility for blood transfusion</string>
    <string name="consent_para2">To maintain your privacy, we are not asking any other detail from you. We just ask your contact phone number and age.  By acknowledging and accepting this consent letter, we have permission to contact you regarding asking your willingness to donate blood plasma. You also give us permission to share your phone number with hospitals who need your blood plasma for treating severe cases. By accepting this consent letter, you also give permission to hospitals to contact you regarding your willingness and time for blood donation for COVID patients</string>
    <string name="consent_para3">Giving your contact number does not mean that you are obliged to donate blood plasma, but it just creates the opportunity to contact you. You may later refuse to donate blood if it is inconvenient to you.</string>
    <string name="consent_para4">Overall your consent allows us and hospitals treating patients to use text messaging, artificial or pre-recorded  voice  message  and  automatic  dialling  technology  for  informational  calls  but  not  for telemarketing or sales calls.</string>
    <string name="consent_para5">It is an online acceptance by pressing a button.</string>
    <string name="terms_main_head">Terms and Conditions</string>
    <string name="delete_main_head">Delete Record</string>
    <string name="delete_para1">If you successfully donated your blood plasma then, please fill the below form, so we can better utilize your blood and also delete your contact information, and the hospital will also stop reminding you about donating blood. </string>
    <string name="delete_field1">Phone</string>
    <string name="delete_hint1">Enter phone here</string>
    <string name="delete_field2">Blood Group</string>
    <string name="delete_field3">Hospital</string>
    <string name="delete_hint3">Enter hospital name</string>
    <string name="delete_field4">City</string>
    <string name="delete_hint4">Enter hospital city</string>
    <string name="delete_field5">Donation Date</string>
    <string name="delete_hint5">(YYYY-MM-DD)</string>
    <string name="delete_button">Submit</string>
    <string name="delete_footer">Kindly do not entertain phone calls on this issue from any individual until it comes from a hospital. For your safety, try using your own transportation system to go to the hospital which contacted you for blood.</string>
</resources>