<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/faq"
        android:title="@string/main_menu_item1"
        app:showAsAction="never"/>

    <item android:id="@+id/contact"
        android:title="@string/main_menu_item2"
        app:showAsAction="never"/>

    <item android:id="@+id/tnc"
        android:title="@string/main_menu_item3"
        app:showAsAction="never"/>

    <item android:id="@+id/consent"
        android:title="@string/main_menu_item4"
        app:showAsAction="never"/>

    <item android:id="@+id/share"
        android:title="@string/main_menu_item5"
        app:showAsAction="never"/>

    <item android:id="@+id/call"
        android:title="@string/main_menu_item6"
        app:showAsAction="never"/>

</menu>