<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:text="@string/request_main_head"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/request_para1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/request_field1" />

                <EditText
                    android:id="@+id/request_age"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="number"
                    android:autofillHints=""
                    android:hint="@string/request_hint1"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/request_field2" />

                <Spinner
                    android:id="@+id/rrecov_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/request_field3" />

                <Spinner
                    android:id="@+id/rbgroup_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/request_field4" />

                <EditText
                    android:id="@+id/request_phone"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="phone"
                    android:autofillHints=""
                    android:hint="@string/request_hint4"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/request_field5" />

                <EditText
                    android:id="@+id/request_hphone"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="phone"
                    android:autofillHints=""
                    android:hint="@string/request_hint5"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/request_field6" />

                <EditText
                    android:id="@+id/request_hemail"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="textEmailAddress"
                    android:autofillHints=""
                    android:hint="@string/request_hint6"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/request_field7" />

                <EditText
                    android:id="@+id/request_city"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="textAutoComplete"
                    android:autofillHints=""
                    android:hint="@string/request_hint7"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/request_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_button"
                    android:textColor="@color/primaryTextColor"
                    android:background="@color/primaryLightColor"/>

            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/request_footer"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:text="@string/univ_footer"
            android:textColor="@android:color/white"
            android:background="@android:color/background_dark"/>

    </LinearLayout>

</ScrollView>
