<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:text="@string/delete_main_head"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/delete_para1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/delete_field1" />

                <EditText
                    android:id="@+id/delete_phone"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="phone"
                    android:autofillHints=""
                    android:hint="@string/delete_hint1"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/delete_field2" />

                <Spinner
                    android:id="@+id/delbgroup_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/delete_field3" />

                <EditText
                    android:id="@+id/delete_hname"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="text"
                    android:autofillHints=""
                    android:hint="@string/delete_hint3"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/delete_field4" />

                <EditText
                    android:id="@+id/delete_hcity"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="text"
                    android:autofillHints=""
                    android:hint="@string/delete_hint4"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/delete_field5" />

                <EditText
                    android:id="@+id/delete_date"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:inputType="date"
                    android:autofillHints=""
                    android:hint="@string/delete_hint5"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/delete_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_button"
                    android:textColor="@color/primaryTextColor"
                    android:background="@color/primaryLightColor"/>

            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/delete_footer"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:text="@string/univ_footer"
        android:textColor="@android:color/white"
        android:background="@android:color/background_dark"/>

</androidx.constraintlayout.widget.ConstraintLayout>
