<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/consent_main_head"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consent_para1"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consent_para2"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consent_para3"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consent_para4"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consent_para5"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="@string/univ_footer"
                android:textColor="@android:color/white"
                android:background="@android:color/background_dark"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>